--- a/css/style.css
+++ b/css/style.css
@@ -615,7 +615,7 @@ body {
 /* HEADER */
 
 .header {
-  background-image: url('/images/mobile/image-header.jpg');
+  background-image: url('../images/mobile/image-header.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -630,7 +630,7 @@ body {
 
 @media (min-width: 1024px) {
   .header {
-    background-image: url('/images/desktop/image-header.jpg');
+    background-image: url('../images/desktop/image-header.jpg');
     padding-bottom: 11rem;
   }
 }
@@ -1033,7 +1033,7 @@ body {
 }
 
 .opportunity__card--first {
-  background-image: url('/images/mobile/image-graphic-design.jpg');
+  background-image: url('../images/mobile/image-graphic-design.jpg');
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
@@ -1043,7 +1043,7 @@ body {
 
 @media (min-width: 900px) {
   .opportunity__card--first {
-    background-image: url('/images/desktop/image-graphic-design.jpg');
+    background-image: url('../images/desktop/image-graphic-design.jpg');
   }
 }
 
@@ -1091,7 +1091,7 @@ body {
 }
 
 .opportunity__card--second {
-  background-image: url('/images/mobile/image-photography.jpg');
+  background-image: url('../images/mobile/image-photography.jpg');
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
@@ -1101,7 +1101,7 @@ body {
 
 @media (min-width: 900px) {
   .opportunity__card--second {
-    background-image: url('/images/desktop/image-photography.jpg');
+    background-image: url('../images/desktop/image-photography.jpg');
   }
 }
 
