--- a/css/style.css
+++ b/css/style.css
@@ -669,8 +669,7 @@ body {
   width: 50%;
   flex-direction: column;
   align-items: center;
-  -moz-column-gap: 0.75rem;
-       column-gap: 0.75rem;
+  gap: 1rem;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   padding: 1rem;
