--- a/css/style.css
+++ b/css/style.css
@@ -669,7 +669,7 @@ body {
   width: 50%;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
+  justify-content: space-around;
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   padding: 1rem;
@@ -690,6 +690,9 @@ body {
     margin-left: 0px;
     margin-right: 0px;
     flex-direction: row;
+    justify-content: space-between;
+    -moz-column-gap: 0.75rem;
+         column-gap: 0.75rem;
     background-color: inherit;
     padding-right: 0px;
     --tw-text-opacity: 1;
